force-app/main/default/objects/NPN_Community_Home_Page_Link__c/NPN_Community_Home_Page_Link__c.object-meta.xml
<CustomObject>
    <description>NPN : Home Page : NPN Community Home Page Links for Community Lightning HomePage</description>
    <label>NPN Community Home Page Link</label>
    <nameField>
        <displayFormat>NPN-{0000}</displayFormat>
        <label>NPN Community Home Page Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPN Community Home Page Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>