force-app/main/default/objects/NPN_Community_Home_Page_Link__c/fields/Button_Link__c.field-meta.xml
<CustomField>
    <fullName>Button_Link__c</fullName>
    <label>Button Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>