force-app/main/default/objects/NPN_Community_Home_Page_Link__c/fields/CustomPermissionName__c.field-meta.xml
<CustomField>
    <fullName>CustomPermissionName__c</fullName>
    <label>CustomPermissionName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>