force-app/main/default/objects/NPN_Community_Home_Page_Link__c/fields/Has_Button__c.field-meta.xml
<CustomField>
    <fullName>Has_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Button</label>
    <type>Checkbox</type>
</CustomField>