force-app/main/default/objects/NPN_Community_Home_Page_Link__c/fields/Link_Type__c.field-meta.xml
<CustomField>
    <fullName>Link_Type__c</fullName>
    <label>Link Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>