force-app/main/default/objects/NPN_Community_Home_Page_Link__c/fields/Open_For_All__c.field-meta.xml
<CustomField>
    <fullName>Open_For_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open For All</label>
    <type>Checkbox</type>
</CustomField>