force-app/main/default/objects/NPN_Community_Home_Page_Link__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CustomPermissionName__c</columns>
    <columns>Button_Label__c</columns>
    <columns>Button_Link__c</columns>
    <columns>Has_Button__c</columns>
    <columns>Link_Label__c</columns>
    <columns>Order__c</columns>
    <columns>Link_Type__c</columns>
    <columns>Link_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>