force-app/main/default/objects/NPN_Community_Home_Page_Link__c/listViews/Header_Links.listView-meta.xml
<ListView>
    <fullName>Header_Links</fullName>
    <columns>NAME</columns>
    <columns>CustomPermissionName__c</columns>
    <columns>Link_Type__c</columns>
    <columns>Link_URL__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Link_Type__c</field>
        <operation>equals</operation>
        <value>Header</value>
    </filters>
    <label>Header Links</label>
    <language>en_US</language>
</ListView>